vbnc/vbnc/vbnc/tests/Errors/30060-15.vb
Class T
    Const M_String As String = 2I
End Class